@@ -16,6 +16,5 @@ A full "to do" list is maintained on SourceForge
 + Map
  + Support map editing
  + Support simple map optimization
-+ Support for LoY guild information capture/display.
 + Seperate UI from data storage/handling in Combat Window and Experience Window
 + Create new and improved item db support.
